feat(auth): add update of email/password

--- a/src/resources/views/mail/change-email-password.edge
+++ b/src/resources/views/mail/change-email-password.edge
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Welcome to Athenna</title>
+<title>Change Email & Password</title>
 <style>
     body {
         font-family: '-apple-system', 'BlinkMacSystemFont', 'Helvetica', 'Arial', 'sans-serif', 'apple color emoji';
@@ -61,11 +61,15 @@
 <body>
     <div class="header">
         <img src="https://athenna.io/img/logos/minerva.png" alt="Minerva Logo" class="minerva-img">
-        <h1>Welcome to Athenna {{ user.name }}!</h1>
+        <h1>Hey there {{ user.name }}!</h1>
     </div>
     <div class="activation">
-        <p>We are happy to have you here. You still need to confirm your account:</p>
-        <a class="button" href="{{ `${Config.get('http.url')}/api/v1/verify-email?emailToken=${user.emailToken}` }}">CONFIRM ACCOUNT</a>
+        <p>
+          We are sending you this email because you have requested to
+          change your account email to <b>{{ email }}</b> and also to
+          change your <b>password</b>. To confirm the update, click the link bellow:
+        </p>
+        <a class="button" href="{{ `${Config.get('http.url')}/api/v1/confirm/email/password?token=${token}&email=${email}&password=${password}` }}">CONFIRM EMAIL & PASSWORD CHANGE</a>
     </div>
     <div class="help">
       <p>
